# caixa-conversao-toolkit

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: revisor-metodologico.md
analise/: README.md
artigo/: README.md  main.tex  referencias.bib
artigo/secoes/: conclusao.tex  contexto.tex  introducao.tex  metodo.tex  resultados.tex
colaboracao/manifestos/: 2026-07-15-consulta-estrutura-colaboracao.md  (+5 more)
dados/: README.md
docs/: avaliacao-independente-2026-07-15.md  codebook-fases.md  contexto-debate-metodologico-mensuracao.md  decisoes.md  desenhos-concorrentes.md  fontes-de-estudo.md  handoff-2026-07-16-base-corpus.md  memorando-quantidades-historicas.md  plano-batch-anotadores.md  plano-pipeline.md  protocolo-colaboracao-claude-codex.md  relatorio-carga-piloto-1906.md  relatorio-cobertura-censo.md  revisao-independente-claude-2026-07-17.md  sintese-desenho-mensuracao.md  testes-desenho-mensuracao.md
fontes/: README.md
fontes/cpdoc/: index.md
legado/: README.md  README_original.md  consolidador_analises.py  requirements.txt  rnc1.0 copy.py  rnc1.0.py  text_analysis1.0.py  text_analysis2.0.py
pipeline/: README.md
scripts/: invoca-codex.ps1
tests/: __init__.py  test-invoca-codex.ps1  test-parecer-codex-skill.ps1  test_base_db.py  test_base_schema.py  test_carrega_censo.py  test_carrega_piloto.py  test_censo.py  test_date_audit.py  test_extrai_texto.py  test_indice_bndigital.py  test_recupera_indice.py  test_relatorio_censo.py  test_repository_hygiene.py
(+2114 files in other folders)
